--- a/styles.css
+++ b/styles.css
@@ -1,54 +1,96 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+:root {
+    --dark-grey: #494963;
+    --grey: #cbcbd3;
+    --light-grey: #dcdce0;
+    --lighter-grey: #e9e9ec;
+    --gradient-simple: linear-gradient(90deg, #ff7402, #e42153, #3c3ae5);
+    --gradient: linear-gradient(90deg, #ffcb02, #ff7402, #ff6d7e, #e42153, #3c3ae5);
+    --gradient-transparent: linear-gradient(90deg, rgba(255, 203, 2, 0.6), rgba(255, 116, 2, 0.6), rgba(255, 109, 126, 0.6), rgba(228, 33, 83, 0.6), rgba(60, 58, 229, 0.6));
+    --orange: #ff7402;
+    --pink: #e42153;
+    --light-blue: #6d6ae9;
+    --blue: #3c3ae5;
+}
+
+* {
+    font-family: Inter, sans-serif;
+}
+
+a {
+    color: var(--blue);
+}
+
 body {
+    color: var(--dark-grey);
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     margin: 0px;
-    background-color: #f0f0f0;
-    font-family: Arial, sans-serif;
-    max-height: 100vh; /* Limita la altura en pantallas grandes */
+    background-color: var(--light-grey);
+    max-height: 100vh;
+    /* Limita la altura en pantallas grandes */
 }
 
 .chat-container {
-    width: 90%; /* Usa un porcentaje para la anchura */
-    max-width: 500px; /* Limita el tamaño en pantallas grandes */
-    height: 80%; /* Adapta la altura al tamaño de la pantalla */
-    background-color: #fff;
+    width: 90%;
+    /* Usa un porcentaje para la anchura */
+    max-width: 500px;
+    /* Limita el tamaño en pantallas grandes */
+    height: 80%;
+    /* Adapta la altura al tamaño de la pantalla */
+    background-color: var(--lighter-grey);
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     display: flex;
-    flex-direction: column; /* Asegura un diseño vertical */
+    flex-direction: column;
+    /* Asegura un diseño vertical */
     overflow: hidden;
-    padding: 10px;
+    /* padding: 10px; */
 }
 
 .chat-box {
-    flex: 1; /* Permite que el chat-box ocupe el espacio restante */
+    flex: 1;
+    /* Permite que el chat-box ocupe el espacio restante */
     overflow-y: auto;
-    padding: 10px;
-    border-bottom: 1px solid #ccc;
+    padding: 12px;
+    border-bottom: 1px solid var(--grey);
 }
 
 .input-container {
     display: flex;
     padding: 10px;
-    gap: 10px; /* Espaciado uniforme entre elementos */
+    gap: 10px;
+    /* Espaciado uniforme entre elementos */
 }
 
 input {
+    color: var(--dark-grey);
     flex: 1;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid var(--grey);
     border-radius: 5px;
+}
+
+input:focus {
+    border: 1px solid var(--dark-grey);
+    outline: 1px solid var(--dark-grey);
 }
 
 button {
     padding: 10px;
-    background-color: #007bff;
+    background: var(--light-blue);
     color: #fff;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
+}
+
+button:hover {
+    background-color: var(--blue);
 }
 
 .message {
@@ -65,15 +107,21 @@ button {
     transform: translateY(0);
 }
 
+.message.transparent {
+    opacity: 1;
+    background: var(--gradient-transparent);
+    transform: translateY(0);
+}
+
 .user-message {
-    background-color: #007bff;
+    background: var(--gradient);
     color: #fff;
     text-align: right;
 }
 
 .bot-message {
-    background-color: #f0f0f0;
-    color: #333;
+    background-color: #ffffff;
+    color: var(--dark-grey);
 }
 
 .option {
@@ -81,7 +129,7 @@ button {
     /* width: 100%; Ocupa todo el ancho disponible */
     padding: 10px;
     margin: 5px 0;
-    background-color: #007bff;
+    background: var(--gradient);
     color: #fff;
     text-align: center;
     border: none;
@@ -90,6 +138,7 @@ button {
     transition: background-color 0.3s ease-in-out, opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
     opacity: 0;
     transform: translateY(20px);
+    font-weight: 500;
 }
 
 .option.visible {
@@ -98,5 +147,5 @@ button {
 }
 
 .option:hover {
-    background-color: #0056b3;
+    opacity: 0.8;
 }
