--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,7 @@ body {
     border-bottom: 1px solid var(--grey);
 }
 
+
 .input-container {
     display: flex;
     padding: 10px;
@@ -66,12 +67,16 @@ body {
     /* Espaciado uniforme entre elementos */
 }
 
+
 input {
+    font-size: 18px;
     color: var(--dark-grey);
     flex: 1;
     padding: 10px;
     border: 1px solid var(--grey);
     border-radius: 5px;
+    width: 100%;;
+
 }
 
 input:focus {
@@ -80,6 +85,7 @@ input:focus {
 }
 
 button {
+    font-size: 16px;
     padding: 10px;
     background: var(--light-blue);
     color: #fff;
